# mcp-shield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.mcp-audit  LAUNCH.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  __init__.py  __main__.py  action.yml  cli.py  pyproject.toml  sandbox-entrypoint.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml
analyzers/: __init__.py  deps.py  npm_checks.py  sbom.py  supply_chain.py  typosquat.py  urls.py  version_pin.py
approval/: store.py  workflow.py
cli/: __init__.py  _cmd_live.py  _cmd_other.py  _cmd_scan.py  _layers.py  _parser.py  _utils.py
core/: config_finder.py  context_refiner.py  cwe.py  engine.py  file_classifier.py  models.py  paths.py  protocols.py  registry.py  remediation.py  trusted.py
damn-vulnerable-mcp/: 01-shell-injection.js  02-eval-exec.js  03-ssrf.ts  04-secrets.py  05-path-traversal.js  07-prompt-injection.json  08-permissions-excessive.js  09-deno-bun-runtime.ts  10-kitchen-sink.py  README.md  validate.py
damn-vulnerable-mcp/06-postinstall-supply-chain/: index.js  package.json
detectors/code/: _utils.py  binary_analysis.py  eval_exec.py  path_traversal.py  permissions.py  secrets.py  shell_injection.py  ssrf.py
detectors/delta/: capability_drift.py  param_divergence.py  tool_shadowing.py
detectors/meta/: __init__.py  annotation_coherence.py  description_heuristic.py  markdown_injection.py  prompt_injection.py  prompt_template.py  resource_injection.py  sampling_detector.py  schema_injection.py  unicode_tricks.py
fetcher/: live.py
formatters/: html.py  json.py  sarif.py  terminal.py
runtime/: __init__.py  bait_switch.py  network_monitor.py  reaudit.py  sandbox.py
schemas/: audit-output.schema.json
scoring/: __init__.py  aivss.py  verdict.py
tests/: test_annotation_coherence.py  test_bait_switch.py  test_binary_analysis.py  test_code_detectors.py  test_config_finder.py  test_delta_detectors.py  test_detectors.py  test_engine_integration.py  test_formatters.py  test_meta_detectors.py  test_prompt_template.py  test_resource_injection.py  test_sampling_detector.py  test_sandbox.py  test_scoring.py
