[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-shield"
version = "2.0.0"
description = "Security audit framework for MCP (Model Context Protocol) servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GaboLabs", email = "GaboITB@users.noreply.github.com"},
]
keywords = ["mcp", "security", "audit", "ai", "llm", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
mcp-shield = "mcp_shield.cli:main"

[project.urls]
Homepage = "https://github.com/GaboITB/mcp-shield"
Issues = "https://github.com/GaboITB/mcp-shield/issues"

[tool.setuptools.packages.find]
include = ["mcp_shield*"]
