[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-shield-audit"
version = "3.0.0"
description = "Security audit framework for MCP (Model Context Protocol) servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "GaboLabs", email = "GaboITB@users.noreply.github.com"},
]
keywords = ["mcp", "security", "audit", "ai", "llm", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
]

[project.scripts]
mcp-shield = "mcp_shield.cli:main"

[project.urls]
Homepage = "https://github.com/GaboITB/mcp-shield"
Issues = "https://github.com/GaboITB/mcp-shield/issues"

[tool.setuptools]
packages = [
    "mcp_shield",
    "mcp_shield.cli",
    "mcp_shield.core",
    "mcp_shield.detectors",
    "mcp_shield.detectors.code",
    "mcp_shield.detectors.meta",
    "mcp_shield.detectors.delta",
    "mcp_shield.analyzers",
    "mcp_shield.fetcher",
    "mcp_shield.formatters",
    "mcp_shield.approval",
    "mcp_shield.runtime",
    "mcp_shield.scoring",
]
package-dir = {"mcp_shield" = "."}
